full book in place

--- a/manuscript/page-11/body.html
+++ b/manuscript/page-11/body.html
@@ -1,1 +1,5 @@
-<div class="leaf flex"><div class="inner justify"><p>inclined plane of little vessels then and there arranged in order, ready to have imperial gallons of facts poured into them until they were full to the brim.</p></div> </div>
+<div class="leaf flex"><div class="inner justify">
+	<img src ="https://raw.githubusercontent.com/marvindanig/hard-times/master/assets/images/p100bs.jpg" width="100%" height="100%" />
+
+
+</div> </div>
