--- a/manuscript/page-207/body.html
+++ b/manuscript/page-207/body.html
@@ -1,1 +1,6 @@
-<div class="leaf flex"><div class="inner justify"><p>As she staggered to it, he avoided her with a shudder, and passed&mdash;his face still hidden&mdash;to the opposite end of the room.&nbsp; She threw herself upon the bed heavily, and soon was snoring hard.&nbsp; He sunk into a chair, and moved but once all that night.&nbsp; It was to throw a covering over her; as if his hands were not enough to hide her, even in the darkness.</p></div> </div>
+<div class="leaf flex"><div class="inner justify">
+	
+<img src ="https://raw.githubusercontent.com/marvindanig/hard-times/master/assets/images/p132s.jpg" width="90%" />
+
+
+</div> </div>
