--- a/manuscript/page-430/body.html
+++ b/manuscript/page-430/body.html
@@ -1,1 +1,6 @@
-<div class="leaf flex"><div class="inner justify"><p>Stephen said &lsquo;Yes,&rsquo; again.</p><p>Stephen, whose way had been in the contrary direction, turned about, and betook himself as in duty bound, to the red brick castle of the giant Bounderby.</p></div> </div>
+<div class="leaf flex"><div class="inner justify">
+
+<img src ="https://raw.githubusercontent.com/marvindanig/hard-times/master/assets/images/p206s.jpg" width="90%" />
+
+
+</div> </div>
