--- a/manuscript/page-695/body.html
+++ b/manuscript/page-695/body.html
@@ -1,1 +1,7 @@
-<div class="leaf flex"><div class="inner justify"><p>a dread of what other fellows who went in for similar sorts of things, would say at his expense if they knew it&mdash;so oppressed him, that what was about the very best passage in his life was the one of all others he would not have owned to on any account, and the only one that made him ashamed of himself.</p></div> </div>
+<div class="leaf flex"><div class="inner justify">
+
+<img src ="https://raw.githubusercontent.com/marvindanig/hard-times/master/assets/images/p64s.jpg" width="90%" />
+
+
+
+</div> </div>
